--- a/slice and dice/style.css
+++ b/slice and dice/style.css
@@ -1,15 +1,44 @@
+* {box-sizing:border-box}
+
 .container {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
 }
 .header{
 	grid-column:span 12;
-	background-image: url("logo.jpg");
-	background-repeat: no-repeat;
+    width:100%;
+	height:400px;
+    
+}
+#first{
+	height:100%;
+	background-image: url("img1.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     background-size: cover;
-	height:300px;
-    color: black;
-	font-family:'Raleway';
+}
+#second{
+	height:100%;
+	background-image: url("img2.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+#third{
+	height:100%;
+	background-image: url("img3.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+.nav{
+	position:absolute;
+}
+.text{
+	text-align:center;
+	position:absolute;
+	left:40%;
+	top:25%;
 }
 .about{
 	text-align:center;
@@ -31,3 +60,31 @@ ul{
 li{
 	display:inline;
 }	
+.mySlides {
+  display: none;
+}
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 30%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 30px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
