--- a/slice and dice/style.css
+++ b/slice and dice/style.css
@@ -94,4 +94,9 @@ p {
   animation-name: fade;
   animation-duration: 1.5s;
 }
-
+@media only screen and (max-width: 600px) {
+	.section1{
+		grid-column:span 12;
+	}	
+	
+}
