--- a/slice and dice/style.css
+++ b/slice and dice/style.css
@@ -84,9 +84,23 @@ p {
   border-radius: 0 3px 3px 0;
   user-select: none;
 }
+
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
+}
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+.active, .dot:hover {
+  background-color: #717171;
 }
 .fade {
   -webkit-animation-name: fade;
@@ -105,7 +119,7 @@ p {
 	.text{
 	text-align:center;
 	position:absolute;
-	left:20%;
+	left:10%;
 	top:25%;
     }
 }
